--- a/package.json
+++ b/package.json
@@ -10,23 +10,31 @@
   },
   "dependencies": {
     "@emotion/css": "^11.11.2",
+    "@tanstack/react-query": "^5.49.2",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "@walletconnect/web3-provider": "^1.8.0",
     "autoprefixer": "10.4.14",
+    "axios": "^1.7.2",
     "chai": "^4.3.7",
+    "dayjs": "^1.11.11",
     "easymde": "^2.18.0",
     "eslint": "8.45.0",
-    "eslint-config-next": "13.4.10",
+    "eslint-config-next": "^14.2.4",
     "ethereum-waffle": "^4.0.10",
-    "ethers": "^5.7.2",
-    "next": "13.4.10",
-    "postcss": "8.4.26",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "ethers": "^6.13.1",
+    "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
+    "next": "^14.2.4",
+    "postcss": "^8.4.39",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-markdown": "^8.0.7",
     "react-simplemde-editor": "^5.2.0",
+    "recoil": "^0.7.7",
+    "recoil-persist": "^5.1.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "web3modal": "^1.9.12"
